d_ajax_search.css some fix table overflow scroll

--- a/admin/view/stylesheet/d_ajax_search/d_ajax_search.css
+++ b/admin/view/stylesheet/d_ajax_search/d_ajax_search.css
@@ -66,6 +66,14 @@ h4 {
 .pagination > li{
     cursor:pointer;
 }
+.table-responsive{
+    overflow: inherit;
+}
+@media screen and (min-width: 1500px) {
+    .table-responsive .more-details{
+        margin-left: 15px!important;
+    }
+}
 .table-responsive.products{
     position: relative;
 }
